# emillaris

./: .gitignore  emillaris-rs.gdextension  export_presets.cfg  icon.svg.import  project.godot
data/: client_info.tres  message.tres
obsidian/: Galaxy.md  Planet.md  System.md  main.md
obsidian/.obsidian/: appearance.json  community-plugins.json  workspace.json
obsidian/.obsidian/plugins/obsidian-style-settings/: data.json
obsidian/Victories/: Diplomatic Victory.md  Military Victory.md  Technological Victory.md  Total Assimilation.md
rust/: Cargo.toml  build.sh
rust/src/: lib.rs  logger.rs
rust/src/websocket/: client.rs  message.rs  mod.rs  server.rs
scenes/: lobby.tscn  main.tscn
src/: client_info.gd  global.gd  lobby.gd  logger.gd  main_menu.gd
src/websocket/: Client.gd  Server.gd  message.gd
