[package]
name = "emillaris-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.2", features = ["experimental-wasm", "lazy-function-tables"] }
thiserror = "2.0"
tracing = "0.1"

rand = "0.9"
rand_pcg = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
rmp-serde = "1.3"

[features]
nothreads = ["godot/experimental-wasm-nothreads"]
